--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <title>Architecture</title>
@@ -14,9 +15,11 @@
 
     <!-- start header section -->
     <header class="home" id="home">
+
         <div class="snipper-container">
-            <i class="fa-solid fa-spinner"></i>
+            <i class="fa-solid fa-spinner "></i>
         </div>
+
         <div class="text">
             <h1>Architecture & Interior Design</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
